# college

./: README.md
1 semester/: README.md
1 semester/IntroductionToProgramming/osiagalne(achievable)/: debug_functions.c  osiagalne.c  test13.in  test4.in  test5.in  test6.in  test9.in
1 semester/IntroductionToProgramming/osiagalne(achievable)/testy-osiagalne-master/: README.md  testuj.sh
1 semester/IntroductionToProgramming/poziomka(wild_strawberry)/: poziomka.c
1 semester/IntroductionToProgramming/poziomka(wild_strawberry)/testy-poziomeczka-main/: .gitignore  README.md  opcje  students.sh  test10.in  test10.out  test3.in  test5.in  test5.out  test6.out  test8.in  test9.in  testuj.sh
1 semester/IntroductionToProgramming/wielomiany(polynomials)/: wielomiany.c
1 semester/IntroductionToProgramming/wielomiany(polynomials)/wielomiany_sprawdzarka/: instrukcja_obslugi.txt
1 semester/wpi/: README.md
1 semester/wpi/osiagalne(achievable)/: test1.in  test10.in  test12.in
1 semester/wpi/osiagalne(achievable)/testy-osiagalne-master/: .gitignore  szybciorem.sh
1 semester/wpi/poziomka(wild_strawberry)/testy-poziomeczka-main/: szybciorem.sh  test2.out  test3.out  test4.in  test4.out  test6.in  test7.in  test7.out  test8.out  test9.out
1 semester/wpi/wielomiany(polynomials)/wielomiany_sprawdzarka/: testuj.sh
2 semester/IndividualProgrammingProject/: README.md
2 semester/IndividualProgrammingProject/Telephones/: MainPage.dox
2 semester/IndividualProgrammingProject/labyrinth/: queue.c  queue.h
2 semester/ObjectOrientedProgramming/BajtTrade/: pom.xml
2 semester/ipp/: README.md
2 semester/ipp/Telephones/: .gitignore  CMakeLists.txt  Doxyfile.in
2 semester/ipp/Telephones/src/: phone_forward.c  phone_forward.h  phone_forward_example.c
2 semester/ipp/labyrinth/: main.c  makefile  test.sh
2 semester/oop/: README.md
3 semester/ConcurrentProgramming/QueueBenchmark/: BLQueue.c  CMakeLists.txt  HazardPointer.c  HazardPointer.h  LLQueue.c  OldSimple.c  README.md  RingsQueue.c  RingsQueue.h  SimpleQueue.c  multiple_read_multiple_write.c  multiple_read_multiple_write_with_isempty.c  multiple_read_one_write.c  multiple_read_one_write_with_isempty.c  one_read_multiple_write.c  one_read_multiple_write_with_isempty.c  one_read_one_write_tester.c  one_read_one_write_tester_with_isempty.c  simpleTester.c
3 semester/ConcurrentProgramming/StorageSystem/: README.md
(+1168 files in other folders)
